--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ packages = [
 python = "^3.10"
 requests = "^2.31.0"
 pydantic = "^2.7.0"
-ollama = "^0.2.1"
 PyYAML = "^6.0.1"
+openai = "^1.42.0"
 chromadb = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
